--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,11 +6,17 @@
     {
       "path": "scss/main.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/main.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "dist/assets/1_web.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2239925,\"newSize\":2216327}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "dist",
+      "dist/assets"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
